[gd_scene load_steps=6 format=3 uid="uid://c3dlvtbykp4x"]

[ext_resource type="Script" path="res://Scripts/Menus/level_selector.gd" id="1_bo1w6"]
[ext_resource type="Script" path="res://Scripts/Menus/Background.gd" id="1_klunx"]
[ext_resource type="Texture2D" uid="uid://c6el02smemtgd" path="res://assets/images/1682336188585.jpg" id="2_icu3q"]
[ext_resource type="FontFile" uid="uid://dp1p4hfox26d" path="res://assets/fonts/VCR_OSD_MONO_1.001.ttf" id="3_iamlx"]
[ext_resource type="Theme" uid="uid://dxl7ye1121i88" path="res://assets/themes/mainMenu_theme.tres" id="4_iivx3"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bo1w6")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="Node2D" parent="Panel"]
script = ExtResource("1_klunx")

[node name="ParallaxBackground" type="ParallaxBackground" parent="Panel/Background"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Panel/Background/ParallaxBackground"]
motion_mirroring = Vector2(1900, 720)

[node name="Background" type="Sprite2D" parent="Panel/Background/ParallaxBackground/ParallaxLayer"]
texture_filter = 1
position = Vector2(938, 522)
texture = ExtResource("2_icu3q")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 2
anchor_left = 0.062
anchor_top = 0.08
anchor_right = 0.678
anchor_bottom = 0.229
offset_right = 588.0
offset_bottom = 74.5
grow_horizontal = 2
scale = Vector2(0.5, 0.5)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("3_iamlx")
theme_override_font_sizes/font_size = 110
text = "LEVEL SELECTOR"
vertical_alignment = 1

[node name="Tutorial" type="Button" parent="Panel"]
layout_mode = 2
anchor_left = 0.08032
anchor_top = 0.256
anchor_right = 0.285
anchor_bottom = 0.378
offset_left = -0.16
offset_right = 307.5
offset_bottom = 61.0
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 0
theme = ExtResource("4_iivx3")
theme_override_fonts/font = ExtResource("3_iamlx")
theme_override_font_sizes/font_size = 70
text = "LEVEL #1"

[node name="3D Level" type="Button" parent="Panel"]
layout_mode = 2
anchor_left = 0.08208
anchor_top = 0.398
anchor_right = 0.282
anchor_bottom = 0.52
offset_left = -1.04
offset_right = 303.0
offset_bottom = 61.0
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 0
size_flags_vertical = 4
theme = ExtResource("4_iivx3")
theme_override_fonts/font = ExtResource("3_iamlx")
theme_override_font_sizes/font_size = 70
text = "LEVEL #2"
metadata/_edit_use_anchors_ = true

[node name="4D Level #1" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.08032
anchor_top = 0.542
anchor_right = 0.285
anchor_bottom = 0.666
offset_left = -0.16
offset_right = 307.5
offset_bottom = 62.0
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 0
theme = ExtResource("4_iivx3")
theme_override_fonts/font = ExtResource("3_iamlx")
theme_override_font_sizes/font_size = 70
text = "LEVEL #3
"
metadata/_edit_use_anchors_ = true

[node name="4D Level #2" type="Button" parent="Panel"]
layout_mode = 2
anchor_left = 0.081
anchor_top = 0.684
anchor_right = 0.285
anchor_bottom = 0.81
offset_left = -0.5
offset_top = -3.05176e-05
offset_right = 307.5
offset_bottom = 63.0
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 0
theme = ExtResource("4_iivx3")
theme_override_fonts/font = ExtResource("3_iamlx")
theme_override_font_sizes/font_size = 70
text = "LEVEL #4
"
metadata/_edit_use_anchors_ = true

[node name="Back" type="Button" parent="Panel"]
layout_mode = 2
anchor_left = 0.081
anchor_top = 0.822
anchor_right = 0.279
anchor_bottom = 0.948
offset_left = -0.5
offset_right = 298.5
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 0
theme = ExtResource("4_iivx3")
theme_override_fonts/font = ExtResource("3_iamlx")
theme_override_font_sizes/font_size = 70
text = "BACK
"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Panel/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="Panel/3D Level" to="." method="_on_d_level_pressed"]
[connection signal="pressed" from="Panel/4D Level #1" to="." method="_on_d_level_1_pressed"]
[connection signal="pressed" from="Panel/4D Level #2" to="." method="_on_d_level_2_pressed"]
[connection signal="pressed" from="Panel/Back" to="." method="_on_back_pressed"]
